--- a/src/pages/CreditCard.css
+++ b/src/pages/CreditCard.css
@@ -1,3 +1,15 @@
 .cred {
     text-align: center;
 }
+
+.config-btn {
+    white-space: nowrap;
+    display: inline-block;
+    border-radius: 5px 15px;
+    font-size: 16px;
+    color: white;
+    background-image: linear-gradient(#4f93ce, #285f8f);
+    border: 1px solid #4f93ce;
+    cursor: pointer;
+    transition: 1s;
+}
